<resources>
    <string name="app_name">EcoBike</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Support chat</string>
    <string name="title_activity_login">Sign in</string>

    <!-- MAP API -->
    <string name="google_api_key">AIzaSyAyJyXfrjOVuyvXdxdl7EP8snSm0wkG9a0</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- String related to Sign in -->
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="repass_hint">Confirm password</string>
    <string name="btn_link_to_login">Already registered? Start biking!</string>
    <string name="btn_link_to_register">Not a member? Sign up now!</string>



    <string name="take_bike">Take Bike</string>
    <string name="return_bike">Return Bike</string>
    <string name="book_bike">Book Bike</string>
    <string name="book_slot">Book Slot</string>
    <string name="take_mode">Take Mode</string>
    <string name="return_mode">Return Mode</string>
    <string name="openDrawer"></string>
    <string name="closeDrawer"></string>

    <!-- PermissionString -->
    <string name="permission_location_rationale">We need to know your location for make you have the best experience possible.</string>
    <string name="permission_location_denied">Location permission was denied. Please consider granting it in order to use your own location on the map</string>
    <string name="permission_location_never_askagain">Location permission was denied with never ask again.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>

    <!-- SharedPrefencesKeys -->
    <string name="SharedPrefences_Key">Preferencias</string>
    <string name="TokenKey">Token</string>
    <string name="UserKey">User</string>
    <string name="StationKey">Stations</string>

    <!--String related to Menu/settings -->
    <string name="report_settings">Report an issue</string>
    <string name="signout_settings">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
