<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bicis_tfg.bicimad_tfg_app.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/signout_settings"
        android:title="@string/signout_settings"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/report_settings"
        android:title="@string/report_settings"
        android:icon="@drawable/ic_feedback_black_24dp"
        app:showAsAction="ifRoom|withText" />
</menu>
